--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,6 +18,8 @@ jobs:
           node-version: '22'
       - name: Install dependencies
         run: npm ci
+      - name: Build project
+        run: npm run build
       - name: Run tests
         run: npm run coverage
       - name: Upload coverage reports to Codecov
